# sik-skorelowane-serwery

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cmd_args_parser.cpp  cmd_args_parser.hpp  err.c  err.cpp  err.hpp  exceptions.hpp  filesystem_interactions.cpp  filesystem_interactions.hpp  http.cpp  http.hpp  input_parsing.cpp  input_parsing.hpp  makefile  resource.cpp  resource.hpp  server.cpp  server_basic_config.hpp  tcp_server.cpp  tcp_server.hpp  test_http.cpp  test_server.cpp
test_data/: content_length_0_header  content_length_greater_than_0  content_length_not_parsable_value  cut_header_eof  duplicate_ignored_header  duplicate_not_ignored_header  header_no_fieldname  header_no_fielvalue  header_no_spaces  header_value_with_spaces  illegal_chars_in_request_target  invalid_connection_header_value  invalid_header_name  letter_casing_header  malformed_status_line_httpversion_space  malformed_status_line_path_spaces_1  method_not_supported  missing_closing_crlf  missing_closing_crlf_2  request_header_without_colon  request_path_characters_regex  status_line_ok_no_headers  target_ending_with_slash  target_not_starting_with_slash  too_long_header_value_path  too_long_resource_path  two_valid_requests
